Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31579

Switching the active project does not directly update Build menu and build button tooltip

XMLWordPrintable

    • 8c527a136 (14.0)

      Have multiple projects open in Qt Creator. Switch the active project with the target selector or in Projects mode. The build menu still says 'Build project "thepreviousproject"' with the name of the previously active project, and the tooltip of the build tool button in the mode selector as well.

      Triggering the actions does build the actual active project though.

        For Gerrit Dashboard: QTCREATORBUG-31579
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes