ProjectExplorer: Update build actions on change of active project

... regardless from where the change originated.

Fixes: QTCREATORBUG-31579
Change-Id: Id87593f91b670e01278d4c30e73775d018fc6571
Reviewed-by: Eike Ziller <eike.ziller@qt.io>