src/plugins/projectexplorer/projectexplorer.cpp
@@ -504,8 +504,6 @@ public:
     void duplicateFile();
     void deleteFile();
     void handleRenameFile();
-    void handleSetStartupProject();
-    void setStartupProject(Project *project);
     bool closeAllFilesInProject(const Project *project);
 
     void checkRecentProjectsAsync();
@@ -875,6 +873,8 @@ bool ProjectExplorerPlugin::initialize(const QStringList &arguments, QString *er
     connect(sessionManager, &ProjectManager::dependencyChanged,
             dd, &ProjectExplorerPluginPrivate::updateActions);
     connect(SessionManager::instance(), &SessionManager::sessionLoaded,
+            dd, &ProjectExplorerPluginPrivate::updateActions);
+    connect(ProjectManager::instance(), &ProjectManager::startupProjectChanged,
             dd, &ProjectExplorerPluginPrivate::updateActions);
     connect(SessionManager::instance(), &SessionManager::sessionLoaded,
             dd, &ProjectExplorerPluginPrivate::updateWelcomePage);
@@ -1827,7 +1827,7 @@ bool ProjectExplorerPlugin::initialize(const QStringList &arguments, QString *er
     connect(dd->m_renameFileAction, &QAction::triggered,
             dd, &ProjectExplorerPluginPrivate::handleRenameFile);
     connect(dd->m_setStartupProjectAction, &QAction::triggered,
-            dd, &ProjectExplorerPluginPrivate::handleSetStartupProject);
+            dd, [] { ProjectManager::setStartupProject(ProjectTree::currentProject()); });
     connect(dd->m_closeProjectFilesActionFileMenu, &QAction::triggered,
             dd, [] { dd->closeAllFilesInProject(ProjectManager::projects().first()); });
     connect(dd->m_closeProjectFilesActionContextMenu, &QAction::triggered,
@@ -2151,14 +2151,6 @@ void ProjectExplorerPlugin::openNewProjectDialog()
     } else {
         ICore::raiseWindow(ICore::newItemDialog());
     }
-}
-
-void ProjectExplorerPluginPrivate::setStartupProject(Project *project)
-{
-    if (!project)
-        return;
-    ProjectManager::setStartupProject(project);
-    updateActions();
 }
 
 bool ProjectExplorerPluginPrivate::closeAllFilesInProject(const Project *project)
@@ -3926,11 +3918,6 @@ ProjectExplorerPlugin::renameFile(Node *node, const QString &newFileName)
         QMessageBox::warning(ICore::dialogParent(), Tr::tr("Cannot Rename File"), renameFileError);
     });
     return {};
-}
-
-void ProjectExplorerPluginPrivate::handleSetStartupProject()
-{
-    setStartupProject(ProjectTree::currentProject());
 }
 
 void ProjectExplorerPlugin::setAppOutputSettings(const AppOutputSettings &settings)
